[gd_scene load_steps=2 format=3 uid="uid://djccuyeyx2abt"]

[ext_resource type="Script" uid="uid://gyr1cjjdcu7h" path="res://ui/ResultView.gd" id="1_3x1v5"]

[node name="ResultScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3x1v5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.884695, 0.67185, 0.405167, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "結果表示"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiceResult" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "サイコロ結果: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServiceResult" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "サービス内容: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrderConfirmation" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "注文確認: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "もう一度挑戦"

[node name="BackToMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "メニューに戻る"
